Closed Bug 203194 Opened 23 years ago Closed 23 years ago

Installation fails after GRE setup

Categories

(SeaMonkey :: Installer, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: tracy, Assigned: ssu0262)

References

Details

Attachments

(2 files, 1 obsolete file)

seen on moz and commercial builds 2003-04-24-05-trunk -attempt to install the build (full or stub installer) the installation begins okay but it looks like just after the GRE setup is complete a small error popup appears. The installation fails to complete. Retries also fail. I've seen this before. It turned out to be local to my machine. testing dailty builds of the full app and embed apps began to have problems with clashing GRE's (or something liek that). But now I do what ssu recommended in keeping Program Files | Common Files | mozilla.org | GRE clean. I tried installing on another machine and ran into the same install error. this doesn't affect Mac builds (no installer) nor linux builds.
I am seeing the same thing- also with today's mozilla build- will attach screen shot of error alert
thanks for confirming this Grace. To support that this is a problem with todays installer, I went back and installed yesterdays A.M. build without a problem. Cleaned up the dirs and then tried to install todays build with no such luck.
same on win98SE with moz builds 2003-04-24-04-trunk Tested mozilla-win32-installer-sea.exe and mozilla-win32-installer.exe 24-Apr-2003 07:15 219k
regarding alert: I´m getting the same alert, but localized, 'Fehler' instead of 'Error', so it must be an alert from Windows, because I´m using non-localized browsers on a localized windows version.
Sean will be investigating this bug shortly.
*** Bug 203193 has been marked as a duplicate of this bug. ***
Investigation of the Install Log shows "Uncompressing of XPCOM failed".
Same error in the one-hour-later build posted.
I'm on it.
Status: NEW → ASSIGNED
I think my patches from yesterday exposed an old bug that tracy was not able to consistently reproduce (until now). I know what is causing the blank error message to show up, but can't figure out the root of the problem. Might be a memory issue. I just backout my paches from yesterday and it works. downgrading severity and removing smoketest keyword to get the tree to open. I'll debug this more on my test machine.
Severity: blocker → critical
Keywords: smoketest
QA Contact: bugzilla → gbush
2003-04-24-12-trunk respin installs fine.
Attached patch patch v1.0 (obsolete) — Splinter Review
This patch will redo the checkins that I backed out this morning to unblock this bug and also fixes theis bug. The problem was with GRE self-extracting .exe file that Mozilla Setup launches. It was not able to tell that Mozilla Setup was running, so it uncompressed its files into Mozilla Setup's temp dir. When the GRE Setup was done, it cleaned itself up, which in turn cleaned up some of Mozilla Setup's config files and some .xpi files too, thus the error about uncompressing xpcom.xpi and an empty error dialog.
I think mkaply was running into this as well under OS2 before all of my checkins from yesterday.
Attachment #121582 - Flags: review+
Comment on attachment 121582 [details] [diff] [review] patch v1.0 sr=leaf, requesting driver approval so another, already approved, patch can land.
Attachment #121582 - Flags: superreview+
Attachment #121582 - Flags: approval1.4b?
Attached patch patch v1.1Splinter Review
added more comments.
Attachment #121582 - Attachment is obsolete: true
Comment on attachment 121609 [details] [diff] [review] patch v1.1 moving r=sgehani and sr=leaf from previous patch to here and re-requesting a=
Attachment #121609 - Flags: superreview+
Attachment #121609 - Flags: review+
Attachment #121609 - Flags: approval1.4b?
Comment on attachment 121582 [details] [diff] [review] patch v1.0 clearing a= request
Attachment #121582 - Flags: approval1.4b?
Blocks: 202606
Blocks: 48051
Blocks: 67067
WFM respin 2003042412
Comment on attachment 121609 [details] [diff] [review] patch v1.1 a=sspitzer
Attachment #121609 - Flags: approval1.4b? → approval1.4b+
patch checked in. it fixes bug this particular bug and the ones that had their patches backed out (see bug list that this bug blocks).
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified with commercial trunk build 2003-04-25-04-trunk
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: