Reapplying patch that was used to back out yesterday's blocker bug:   bug 203194 - Installation fails after GRE setup

This patch fixes the blocker bug and the following bugs it backed out:
  bug 48051  - Restart dialog needs title
  bug 67067  - "unable to create directory" dialog is titleless
  bug 202606 - Need a way to disable showing of bitmap in dialog

r=sgehani
sr=leaf
a=sspitzer