xpinstall/wizard/windows/setup/extra.h
@@ -169,7 +169,8 @@ LPSTR             GetArgV(LPSTR lpszCommandLine,
                           int iIndex,
                           LPSTR lpszDest,
                           int iDestSize);
-DWORD             ParseCommandLine(LPSTR lpszCmdLine);
+DWORD             ParseCommandLine(LPSTR aMessageToClose, LPSTR lpszCmdLine);
+DWORD             ParseForStartupOptions(LPSTR aCmdLine);
 void              SetSetupRunMode(LPSTR szMode);
 void              Delay(DWORD dwSeconds);
 void              UnsetSetupState(void);
@@ -224,6 +225,7 @@ HRESULT           ProcessXpinstallEngine(void);
 void              GetXpinstallPath(char *aPath, int aPathBufSize);
 int               AddGrePathToApplicationAppPathsKey(void);
 BOOL              GreInstallerNeedsReboot(void);
+void              ReplacePrivateProfileStrCR(LPSTR aInputOutputStr);
 
 #endif /* _EXTRA_H_ */
 
